--- a/page3.html
+++ b/page3.html
@@ -30,6 +30,8 @@ Padding:75px; text-align:right;
 <h2> <b>Gemma's Reflection <b></h2>
 <p> <ul> 
 	<li>knowledge gained</li>
+		<p>Working on designing a website is pretty challenging, however, I like the fact that I gained so much technical vocabulary and being able to understand their meaning is pretty awesome for me.</p>
+	
 	<li> skills gained </li>
 </ul> </p>
 <br>
