--- a/page3.html
+++ b/page3.html
@@ -29,10 +29,27 @@ Padding:75px; text-align:right;
 
 <h2> <b>Gemma's Reflection <b></h2>
 <p> <ul> 
-	<li>knowledge gained</li>
-		<p>Working on designing a website is pretty challenging, however, I like the fact that I gained so much technical vocabulary and being able to understand their meaning is pretty awesome for me.</p>
+	<li> <I>knowledge gained </I></li>
+		<p>Working on designing a website is pretty challenging, however, I like the fact that I gained 
+			so much technical vocabulary and being able to understand their meaning is pretty awesome for me.
+			I really value the idea of understanding the foundamentals of digital design and design process 
+			because I makes me appreciate and expercience the visual effect of every characters, tags and details that
+			I encode. It comples me think that every brush stroke in fine arts and every single character input in modern 
+			web design, especially the styling script for the aesthetic value of the website that I am working on.</p>
+	<br>
+		<p> I have to admit that, at first, my goal of doing the project is just for the subject, I am glad that just as I
+			start reading about the task of creating a website, the interest creeps in and it's been an awesome learning journey 
+			so far. From the experience of working on the task, provided me to be creative, critical and investigative in the project that we are doing.
+			I would say, this made up my learning framework combining the knowledge, understanding and abstraction of the design theory or design cicle by Mickel Hjorts.
+			In- school-practice and peer-to-peer learning, have been beneficial to my learning acquisition. This enabled be to go through the six
+			important design processes: <i> Design Brief, Field study, Ideation, Fabrication,Argumentation and Reflection. </i>
+		
+	</p>
 	
-	<li> skills gained </li>
+	<li> <I>skills gained </I> </li>
+		<p> The subtle acquisition of using the tags, understanding the elements, the variables and many more details of the scripting language is such a 
+			fantastic addition to my skills. Maybe I could be a front-end developer if I am not teaching. </p>
+	
 </ul> </p>
 <br>
 
