--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ Padding:75px; text-align:right;
 		<ul class="dropdown" aria-label="submenu">
 
 		<li> <a href="page3.html"> Gemma </a></li>
-		<li> <a href="site4.html"> Dorthe </a></li>
-		<li> <a href="site5.html"> Stine </a></li>
+		<li> <a href="page4.html"> Dorthe </a></li>
+		<li> <a href="page5.html"> Stine </a></li>
 			
 		</ul>
 		</li>
