--- a/page3.html
+++ b/page3.html
@@ -30,19 +30,32 @@ Padding:75px; text-align:right;
 <h2> <b>Gemma's Reflection <b></h2>
 <p> <ul> 
 	<li> <I>knowledge gained </I></li>
-		<p>Working on designing a website is pretty challenging, however, I like the fact that I gained 
-			so much technical vocabulary and being able to understand their meaning is pretty awesome for me.
+		<p>Working on designing a website is pretty challenging, however, 
+			I like the fact that I gained 
+			so much technical vocabulary and able to understand their meaning,
+			that's pretty awesome I reckon. I really like the task because it 
+			made be the center of the learning process, where, I experience everything from frustration
+			to relieved and proud. 
 			I really value the idea of understanding the foundamentals of digital design and design process 
-			because I makes me appreciate and expercience the visual effect of every characters, tags and details that
-			I encode. It comples me think that every brush stroke in fine arts and every single character input in modern 
-			web design, especially the styling script for the aesthetic value of the website that I am working on.</p>
+			because I makes me appreciate and expercience the visual effect of every characters,
+			tags and details that
+			I encode. It comples me think that every brush stroke in fine arts and
+			every single character input in modern 
+			web design, especially the styling script for the aesthetic 
+			value of the website that I am working on.</p>
 	<br>
-		<p> I have to admit that, at first, my goal of doing the project is just for the subject, I am glad that just as I
-			start reading about the task of creating a website, the interest creeps in and it's been an awesome learning journey 
-			so far. From the experience of working on the task, provided me to be creative, critical and investigative in the project that we are doing.
-			I would say, this made up my learning framework combining the knowledge, understanding and abstraction of the design theory or design cicle by Mickel Hjorts.
-			In- school-practice and peer-to-peer learning, have been beneficial to my learning acquisition. This enabled be to go through the six
-			important design processes: <i> Design Brief, Field study, Ideation, Fabrication,Argumentation and Reflection. </i>		
+		<p> I have to admit that, at first, my goal of doing the project 
+			is just for the subject, I am glad that just as I
+			start reading about the task of creating a website, the
+			interest creeps in and it's been an awesome learning journey 
+			so far. From the experience of working on the task, provided me 
+			to be creative, critical and investigative in the project that we are doing.
+			I would say, this made up my learning framework combining the knowledge,
+			understanding and abstraction of the design theory or design cicle by Mickel Hjorts.
+			In- school-practice and peer-to-peer learning, have been beneficial to
+			my learning acquisition. This enabled be to go through the six
+			important design processes: <i> Design Brief, Field study, 
+			Ideation, Fabrication,Argumentation and Reflection. </i>		
 	</p>
 	
 	<li> <I>skills gained </I> </li>
