--- a/index.html
+++ b/index.html
@@ -71,10 +71,6 @@ ul li ul li {
   width: 100%;
 }
 </style>
-</head>
-
-<body>
-
 <style media="screen">
 #technology{
   background-color:orange;
@@ -90,9 +86,10 @@ background-color:orange; text-color:black:
 Padding:75px; text-align:right;
 
 }  
-
 </style>
-
+</style>
+	</head>
+<body>
 <h1 id="technology"> Technological Understanding </h1>
 <br>
 <h2>
