--- a/page4.html
+++ b/page4.html
@@ -5,11 +5,8 @@
 <title>Teknologiforståelse</title>
  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-
-
-
 <style media="screen">
+Body{ background:URL(html.png);}
 #technology{
   background-color:orange;
   color: black;
@@ -22,7 +19,7 @@ background-color:orange; text-color:black:
 Padding:75px; text-align:right;
 }
 </style>
-
+<body>
 <h1 id="technology"> <I> Technological Understanding </I> </h1>
 
 
