--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset= utf-8 mean/>
 <title>Teknologiforståelse</title>
 <style>
+	Body{ background:URL(background-calm-clouds-747964.jpg);}
 a {
   text-decoration: none;
 }
@@ -154,7 +155,11 @@ Padding:75px; text-align:right;
 <br>
 <p> <b> <I>Field study:</I></b> </p>
 Is there already a similar "reference work"? School tube is a good example, in a reference work for the world's digital / technological tools. </p>
-
+<p>
+	
+<img src="html.png" style="display:block; margin-left:auto; margin-right:auto;"/img>
+</p>
+<br>
 <br>
 
 <div id="footer"> Copyright 2019: Creators of this site are professional programmers. 
