--- a/index.html
+++ b/index.html
@@ -149,16 +149,14 @@ Padding:75px; text-align:right;
 
 <img src="design.png" style="display:block; margin-left:auto; margin-right:auto;"/img>
 
-<h3> what is it?</h3>
+<h3><text-color: yellow;> what is it?</h3>
 	<p text-align="center"> <b> <I>The task: </I> </b></p>
 <p>To design a website for other teachers, where there are subject-specific references to digital tools.</p>
 <br>
 <p> <b> <I>Field study:</I></b> </p>
 Is there already a similar "reference work"? School tube is a good example, in a reference work for the world's digital / technological tools. </p>
-<p>
-	
-<img src="html.png" style="display:block; margin-left:auto; margin-right:auto;"/img>
-</p>
+
+
 <br>
 <br>
 
