--- a/page3.html
+++ b/page3.html
@@ -5,10 +5,6 @@
 <title>Teknologiforståelse</title>
  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-
-
-
 <style media="screen">
 #technology{
   background-color:orange;
@@ -22,8 +18,9 @@ Margin-top:20px; border-top:10px;
 background-color:orange; text-color:black:
 Padding:75px; text-align:right;
 }
+	Body{ background:URL(background-calm-clouds-747964.jpg);}
 </style>
-
+<body>
 <h1 id="technology"> <I> Technological Understanding </I> </h1>
 
 
