--- a/page4.html
+++ b/page4.html
@@ -6,7 +6,7 @@
  <link rel="stylesheet" href="styles.css">
 </head>
 <style media="screen">
-Body{ background:URL(html.png);}
+Body{ background:URL(background-calm-clouds-747964.jpg);}
 #technology{
   background-color:orange;
   color: black;
