--- a/page4.html
+++ b/page4.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset= utf-8 mean/>
 <title>Teknologiforståelse</title>
- <link rel="stylesheet" href="styles.css">
 </head>
-<style media="screen">
+<style media="screen"> <link rel="stylesheet" href="styles.css">
 Body{ background:URL(background-calm-clouds-747964.jpg);}
 #technology{
   background-color:orange;
