--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@ Padding:75px; text-align:right;
 		</li>
  <li><a href="#" aria-haspopup="true"> Documentation </a>
 		<ul class="dropdown" aria-label="submenu">
-
+			<li> <a href="https://docs.google.com/presentation/d/1TDtWJHyYB2zapwOo1poogB3VUWh0D7DC_C2LnqUJGVg/edit?usp=sharing">
+				slides for the documentation </a></li>
 </nav>
 
 </style>
