--- a/page3.html
+++ b/page3.html
@@ -31,24 +31,25 @@ Padding:75px; text-align:right;
 			I like the fact that I gained 
 			so much technical vocabulary and able to understand their meaning,
 			that's pretty awesome I reckon. I really like the task because it 
-			made be the center of the learning process, where, I experience everything from frustration
+			made me the center of the learning process, where, I experience everything from frustration
 			to relieved and proud. 
 			I really value the idea of understanding the foundamentals of digital design and design process 
-			because I makes me appreciate and expercience the visual effect of every characters,
+			because it makes me appreciate and expercience the visual effect of every singles characters,
 			tags and details that
 			I encode. It comples me think that every brush stroke in fine arts and
 			every single character input in modern 
 			web design, especially the styling script for the aesthetic 
-			value of the website that I am working on.</p>
+			value of the website that I am working on has an effect on the total face value of the site.</p>
 	<br>
 		<p> I have to admit that, at first, my goal of doing the project 
 			is just for the subject, I am glad that just as I
 			start reading about the task of creating a website, the
 			interest creeps in and it's been an awesome learning journey 
-			so far. From the experience of working on the task, provided me 
+			so far. The experience of working on the task, encouraged me 
 			to be creative, critical and investigative in the project that we are doing.
-			I would say, this made up my learning framework combining the knowledge,
-			understanding and abstraction of the design theory or design cicle by Mickel Hjorts.
+			I would say, this makes my learning framework combining the knowledge,
+			understanding and abstraction of the design theory or design cicle by Mickel Hjorts, 
+			more interesting, exciting and enjoyable.
 			In- school-practice and peer-to-peer learning, have been beneficial to
 			my learning acquisition. This enabled be to go through the six
 			important design processes: <i> Design Brief, Field study, 
