--- a/page5.html
+++ b/page5.html
@@ -141,9 +141,7 @@ Padding:75px; text-align:right;
   <li><a href="#" aria-haspopup="true">Reflections </a>
 		<ul class="dropdown" aria-label="submenu">
 
-		<li> <a href="page3.html"> Gemma </a></li>
-		<li> <a href="page4.html"> Dorthe </a></li>
-		<li> <a href="site5.html"> Stine </a></li>
+		<li> <a href="page3.html"> My reflections </a></li>
 			
 		</ul>
 		</li>
